@@ -5,6 +5,11 @@ CHANGES IN CUPS V1.3
 
 	- Documentation updates (STR #1775, STR #2130, STR #2131,
 	  STR #2356)
+	- Due to poor IPP support from the vendors, the SNMP
+	  backend no longer tries IPP connections; instead,
+	  it now uses a lookup file with fallback to port 9100
+	  (socket://address) and 515 (lpd://address) printing
+	  (STR #2035, STR #2354) 
 	- The scheduler now recreates the CUPS log directory as
 	  needed (STR #2353)
 	- cupsLangDefault() now maps new-style Apple locale names
